hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_add_null_offset.php
<?php
try {
	$dll = new SplDoublyLinkedList();
	var_dump($dll->add(NULL,2));
} catch (OutOfRangeException $e) {
	echo "Exception: ".$e->getMessage()."\n";
}
?>